# artist-average-word-counter

./: README.md  main.py  main_end_to_end_test.py  main_test.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
src/: api.py  artist_average_word_counter.py  main.py
tests/: api_end_to_end_test.py  api_test.py  artist_average_word_counter_end_to_end_test.py  artist_average_word_counter_test.py  main_end_to_end_test.py  main_test.py
