[metadata]
name = artist-average-word-counter
version = 0.1
author = Stefano Chiodino
description = Averages the words in artists' lyrics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StefanoChiodino/artist-average-word-counter
project_urls =
    Bug Tracker = https://github.com/StefanoChiodino/artist-average-word-counter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src